--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,14 @@
 version: '3'
 
 services:
+  db:
+    image: postgres
+
   data-digester:
     build: .
     volumes:
       - .:/code
     ports:
       - "8000:8000"
+    depends_on:
+      - db
